--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -3,8 +3,7 @@
   tages: news,faculty
   date: 2025-09-05
   link: https://vldb.org/2025/?conference-awards
-  description: Congratulations to Professor [Niv Dayan](https://www.nivdayan.net/), his PhD student Navid Eslami and their co-author Ioana Bercea on receiving the [Best Paper Award](https://vldb.org/2025/?conference-awards) for their work entitled "Diva: Dynamic Range Filter for Var-Length Keys and Queries" at the 51st International Conference on Very Large Data Bases (VLDB) in London this September! A well-deserved award for a data structure that knows how to filter out the competition!
-
+  description: Congratulations to Professor Niv Dayan, his PhD student Navid Eslami and their co-author Ioana Bercea on receiving the Best Paper Award for their work entitled "Diva: Dynamic Range Filter for Var-Length Keys and Queries" at the 51st International Conference on Very Large Data Bases (VLDB) in London this September! A well-deserved award for a data structure that knows how to filter out the competition!
 
 - title: U of T team discovers vulnerability at hardware-software boundary in cloud systems
   image: images/ri_202508.webp
