--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -5,6 +5,13 @@
   link: https://web.cs.toronto.edu/news-events/news/university-of-toronto-team-discovers-vulnerability-at-hardware-software-boundary-in-cloud-systems
   description: 
 
+- title: Niv Dayan Navid Eslami and their co-author Ioana Bercea in receiving a Best Paper Award 
+  image: images/ri_202508.webp
+  tages: news,faculty
+  date: 2025-08-12
+  link: https://web.cs.toronto.edu/news-events/news/university-of-toronto-team-discovers-vulnerability-at-hardware-software-boundary-in-cloud-systems
+  description: 
+
 - title: U of T researchers find GPU vulnerability with ‘catastrophic’ effects on AI model accuracy
   image: images/gpuhammer.webp
   tags: news,faculty
