--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -6,7 +6,7 @@
   description: 
 
 - title: "Niv Dayan, Navid Eslami and their co-author Ioana Bercea in receiving a Best Paper Award" 
-  image: images/ri_202508.webp
+  image: images/vldb25.jpg
   tages: news,faculty
   date: 2025-08-12
   link: https://web.cs.toronto.edu/news-events/news/university-of-toronto-team-discovers-vulnerability-at-hardware-software-boundary-in-cloud-systems
